--- a/DIzzroom/assets/scss/pages/_products.scss
+++ b/DIzzroom/assets/scss/pages/_products.scss
@@ -55,7 +55,7 @@
     
         &__list {
             grid-template-columns: 1fr;
-            grid-row-gap: 5rem;
+            grid-row-gap: 7rem;
         }
 
         &__item {
